--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Angular1</title>
+  <title>Pictionary</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://media.cdnandroid.com/05/4d/6f/3b/imagen-pictionarya-0big.jpg">
 </head>
 
 <body>
