Rajout Photo local

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://media.cdnandroid.com/05/4d/6f/3b/imagen-pictionarya-0big.jpg">
+  <link rel="icon" type="image/x-icon" href="assets/logo.jpg">
 </head>
 
 <body>
